fixes and updates
