# internal/api/contact.go
@@ -1,19 +1,34 @@
 package api
 
 import (
+	"errors"
 	"fmt"
 	"touchly/internal/db"
 	"touchly/internal/terrors"
 )
 
-func (api *api) CreateContact(userID int64, contact db.Contact) (*db.Contact, error) {
-	if contact.Name == "" {
-		return nil, terrors.InvalidRequest(nil, "name is required")
+type CreateAddressRequest struct {
+	ExternalID *string `json:"external_id"`
+	Label      string  `json:"label" validate:"required"`
+	Name       string  `json:"name" validate:"required"`
+	Lat        float64 `json:"lat" validate:"required"`
+	Lng        float64 `json:"lng" validate:"required"`
+} // @Name CreateAddressRequest
+
+func (a CreateAddressRequest) toAddress() db.Address {
+	return db.Address{
+		ExternalID: a.ExternalID,
+		Label:      a.Label,
+		Name:       a.Name,
+		Location: db.Point{
+			Lat: a.Lat,
+			Lng: a.Lng,
+		},
 	}
+}
 
-	contact.UserID = userID
-
-	res, err := api.storage.CreateContact(contact)
+func (api *api) CreateContact(userID int64, contact CreateContactRequest) (*db.Contact, error) {
+	res, err := api.storage.CreateContact(userID, contact.toContact(), contact.Tags, contact.SocialLinks)
 
 	if err != nil {
 		return nil, terrors.InternalServerError(err, "failed to create contact")
@@ -23,7 +38,11 @@ func (api *api) CreateContact(userID int64, contact db.Contact) (*db.Contact, er
 }
 
 func (api *api) DeleteContact(userID, id int64) error {
-	if err := api.storage.DeleteContact(userID, id); err != nil {
+	err := api.storage.DeleteContact(userID, id)
+
+	if err != nil && errors.Is(err, db.ErrNotFound) {
+		return terrors.NotFound(err, "contact not found")
+	} else if err != nil {
 		return terrors.InternalServerError(err, "failed to delete contact")
 	}
 
@@ -31,7 +50,7 @@ func (api *api) DeleteContact(userID, id int64) error {
 }
 
 type UpdateContactRequest struct {
-	Name             *string    `db:"name" json:"name"`
+	Name             *string    `db:"name" json:"name" validate:"required"`
 	Avatar           *string    `db:"avatar" json:"avatar"`
 	ActivityName     *string    `db:"activity_name" json:"activity_name"`
 	Website          *string    `db:"website" json:"website"`
@@ -43,6 +62,22 @@ type UpdateContactRequest struct {
 	Tags             *[]db.Tag  `db:"-" json:"tags,omitempty"`
 	SocialLinks      *[]db.Link `db:"-" json:"social_links,omitempty"`
 } // @Name UpdateContactRequest
+
+type CreateContactRequest UpdateContactRequest // @Name CreateContactRequest
+
+func (r CreateContactRequest) toContact() db.Contact {
+	return db.Contact{
+		Name:             *r.Name,
+		Avatar:           r.Avatar,
+		ActivityName:     r.ActivityName,
+		Website:          r.Website,
+		CountryCode:      r.CountryCode,
+		About:            r.About,
+		PhoneNumber:      r.PhoneNumber,
+		PhoneCallingCode: r.PhoneCallingCode,
+		Email:            r.Email,
+	}
+}
 
 func collectUpdates(contact UpdateContactRequest) map[string]interface{} {
 	updates := map[string]interface{}{}
@@ -148,7 +183,11 @@ func (api *api) GetContact(userID, id int64) (*db.Contact, error) {
 }
 
 func (api *api) SaveContact(userID, contactID int64) error {
-	if err := api.storage.SaveContact(userID, contactID); err != nil {
+	err := api.storage.SaveContact(userID, contactID)
+
+	if err != nil && errors.Is(err, db.ErrAlreadyExists) {
+		return terrors.InvalidRequest(err, "contact already saved")
+	} else if err != nil {
 		return terrors.InternalServerError(err, "failed to save contact")
 	}
 
@@ -156,7 +195,11 @@ func (api *api) SaveContact(userID, contactID int64) error {
 }
 
 func (api *api) DeleteSavedContact(userID, contactID int64) error {
-	if err := api.storage.DeleteSavedContact(userID, contactID); err != nil {
+	err := api.storage.DeleteSavedContact(userID, contactID)
+
+	if err != nil && errors.Is(err, db.ErrNotFound) {
+		return terrors.NotFound(err, "contact not found")
+	} else if err != nil {
 		return terrors.InternalServerError(err, "failed to delete saved contact")
 	}
 
@@ -173,22 +216,24 @@ func (api *api) ListSavedContacts(userID int64) ([]db.Contact, error) {
 	return contacts, nil
 }
 
-func (api *api) CreateContactAddress(userID, contactID int64, address db.Address) (*db.Address, error) {
+func (api *api) CreateContactAddress(userID, contactID int64, address CreateAddressRequest) (*db.Address, error) {
 	contact, err := api.storage.GetContact(userID, contactID)
 
-	if err != nil {
-		if db.IsNoRowsError(err) {
-			return nil, terrors.NotFound(err, "contact not found")
-		}
-
+	if err != nil && db.IsNoRowsError(err) {
+		return nil, terrors.NotFound(err, "contact not found")
+	} else if err != nil {
 		return nil, terrors.InternalServerError(err, "failed to get contact")
+	}
+
+	if contact.Address != nil {
+		return nil, terrors.InvalidRequest(nil, "contact already has an address")
 	}
 
 	if contact.UserID != userID {
 		return nil, terrors.Forbidden(nil, "contact does not belong to user")
 	}
 
-	res, err := api.storage.CreateContactAddress(contactID, address)
+	res, err := api.storage.CreateContactAddress(contactID, address.toAddress())
 
 	if err != nil {
 		return nil, terrors.InternalServerError(err, "failed to create contact address")
